# nodanapy

./: .gitignore  README.md  pyproject.toml  requirements.txt
nodanapy/: __init__.py  wellNA.py
nodanapy/_properties/: gasProperties.py  oilProperties.py  waterProperties.py
nodanapy/_properties_/: gasProperties.py
nodanapy/ipr/: __init__.py  darcy.py  fetkovich.py  lit.py  vogel.py
nodanapy/vlp/: __init__.py  beggsBrill.py  gray.py  hagedornBrown.py
